--- a/cpp-examples/do_exchange/CMakeLists.txt
+++ b/cpp-examples/do_exchange/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(Protobuf REQUIRED)
 find_package(gRPC REQUIRED)
 find_package(Threads REQUIRED)
 find_package(Flatbuffers REQUIRED)
+find_package(Immer REQUIRED)
 
 add_executable(do_exchange main.cc)
 
