--- a/cpp-client/deephaven/client/CMakeLists.txt
+++ b/cpp-client/deephaven/client/CMakeLists.txt
@@ -73,6 +73,7 @@ set(ALL_FILES
     include/public/deephaven/client/highlevel/table/table.h
     include/public/deephaven/client/highlevel/table/ticking_table.h
     include/public/deephaven/client/highlevel/table/unwrapped_table.h
+    include/public/deephaven/client/immerutil/abstract_flex_vector.h
 
     src/utility/executor.cc
     include/private/deephaven/client/utility/executor.h
@@ -107,7 +108,7 @@ set(ALL_FILES
     proto/deephaven/proto/ticket.pb.h
 
     flatbuf/deephaven/flatbuf/Barrage_generated.h
-    include/private/deephaven/client/highlevel/immerutil/abstract_flex_vector.h)
+    )
 
 add_library(client ${ALL_FILES})
 # This is so deephaven::client works both when using the installed CMake config
