--- a/cpp-client/deephaven/client/CMakeLists.txt
+++ b/cpp-client/deephaven/client/CMakeLists.txt
@@ -70,8 +70,6 @@ set(ALL_FILES
     include/public/deephaven/client/container/row_sequence.h
     include/public/deephaven/client/table/table.h
 
-    include/public/deephaven/client/immerutil/abstract_flex_vector.h
-
     include/private/deephaven/client/subscription/index_decoder.h
     include/private/deephaven/client/subscription/space_mapper.h
     include/private/deephaven/client/subscription/subscribe_thread.h
@@ -83,6 +81,10 @@ set(ALL_FILES
     src/subscription/subscribe_thread.cc
     src/subscription/subscribed_table_state.cc
     src/subscription/update_processor.cc
+
+    src/immerutil/abstract_flex_vector.cc
+    include/private/deephaven/client/immerutil/abstract_flex_vector.h
+    include/private/deephaven/client/immerutil/immer_column_source.h
 
     src/utility/executor.cc
     src/utility/misc.cc
@@ -121,7 +123,7 @@ set(ALL_FILES
     proto/deephaven/proto/ticket.pb.h
 
     flatbuf/deephaven/flatbuf/Barrage_generated.h
-    src/immerutil/abstract_flex_vector.cc)
+    )
 
 add_library(client ${ALL_FILES})
 # This is so deephaven::client works both when using the installed CMake config
