ok let's do them separately, like this

--- a/cpp-client/deephaven/client/CMakeLists.txt
+++ b/cpp-client/deephaven/client/CMakeLists.txt
@@ -70,6 +70,7 @@ set(ALL_FILES
     include/public/deephaven/client/container/row_sequence.h
     include/public/deephaven/client/table/table.h
 
+    include/private/deephaven/client/subscription/classic_table_state.h
     include/private/deephaven/client/subscription/index_decoder.h
     include/private/deephaven/client/subscription/space_mapper.h
     include/private/deephaven/client/subscription/subscribe_thread.h
@@ -83,6 +84,7 @@ set(ALL_FILES
     src/subscription/update_processor.cc
 
     src/immerutil/abstract_flex_vector.cc
+    src/immerutil/immer_column_source.cc
     include/private/deephaven/client/immerutil/abstract_flex_vector.h
     include/private/deephaven/client/immerutil/immer_column_source.h
 
@@ -123,7 +125,7 @@ set(ALL_FILES
     proto/deephaven/proto/ticket.pb.h
 
     flatbuf/deephaven/flatbuf/Barrage_generated.h
-    src/immerutil/immer_column_source.cc)
+    )
 
 add_library(client ${ALL_FILES})
 # This is so deephaven::client works both when using the installed CMake config
