--- a/cpp-client/deephaven/client/CMakeLists.txt
+++ b/cpp-client/deephaven/client/CMakeLists.txt
@@ -74,13 +74,13 @@ set(ALL_FILES
     include/private/deephaven/client/subscription/index_decoder.h
     include/private/deephaven/client/subscription/space_mapper.h
     include/private/deephaven/client/subscription/subscribe_thread.h
-    include/private/deephaven/client/subscription/subscribed_table_state.h
+    include/private/deephaven/client/subscription/immer_table_state.h
     include/private/deephaven/client/subscription/subscription_handle.h
     include/private/deephaven/client/subscription/update_processor.h
     src/subscription/index_decoder.cc
     src/subscription/space_mapper.cc
     src/subscription/subscribe_thread.cc
-    src/subscription/subscribed_table_state.cc
+    src/subscription/immer_table_state.cc
     src/subscription/update_processor.cc
 
     src/immerutil/abstract_flex_vector.cc
@@ -125,7 +125,7 @@ set(ALL_FILES
     proto/deephaven/proto/ticket.pb.h
 
     flatbuf/deephaven/flatbuf/Barrage_generated.h
-    )
+    src/subscription/classic_table_state.cc)
 
 add_library(client ${ALL_FILES})
 # This is so deephaven::client works both when using the installed CMake config
