--- a/cpp-client/deephaven/dhclient/CMakeLists.txt
+++ b/cpp-client/deephaven/dhclient/CMakeLists.txt
@@ -135,5 +135,5 @@ target_link_libraries(dhclient PUBLIC ArrowFlight::arrow_flight_shared)
 target_link_libraries(dhclient PUBLIC Arrow::arrow_shared)
 target_link_libraries(dhclient PUBLIC immer)
 target_link_libraries(dhclient PUBLIC protobuf::libprotobuf)
-target_link_libraries(dhclient PUBLIC gRPC::grpc++)
+target_link_libraries(dhclient PUBLIC gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc++_alts)
 target_link_libraries(dhclient PUBLIC Threads::Threads)
