ExcelAddin 1.0.0 (the managed version of ExcelAddIn)

--- a/csharp/ExcelAddIn/ExcelAddIn.csproj
+++ b/csharp/ExcelAddIn/ExcelAddIn.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<UseWindowsForms>true</UseWindowsForms>
-		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+		<AllowUnsafeBlocks>False</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -19,12 +19,25 @@
 		<PackageReference Include="ExcelDna.Addin" Version="*-*" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\client\DeephavenClient\DeephavenClient.csproj" />
+		<PackageReference Include="ExcelDna.IntelliSense" Version="*-*" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\client\Dh_NetClient\Dh_NetClient.csproj" />
+	  <ProjectReference Include="..\client\Dhe_NetClient\Dhe_NetClient.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup>
 		<ExcelDnaCreate32BitAddIn>false</ExcelDnaCreate32BitAddIn>
 		<ExcelDnaPack64BitXllName>DeephavenExcelAddIn64</ExcelDnaPack64BitXllName>
+		<!-- There are certain function signatures we use, like 
+		 public static bool TryParse(string text, out TableTriple result, out string errorText) 
+		 that for some reason (some combination of the existence of an out parameter and
+		 returning the very type being referenced) causes the ExcelAddIn to produce
+		 a warning at startup:
+		 ExcelDna.Integration Warning: 1 : Type Deephaven.ExcelAddIn.Models.TableTriple could not be processed. Error: System.NotSupportedException: A non-collectible assembly may not reference a collectible assembly.
+		 Not sure what's going on here but setting this flag fixes that warning.
+		 -->
+		<ExcelAddInDisableAssemblyContextUnload>true</ExcelAddInDisableAssemblyContextUnload>
 	</PropertyGroup>
 
 </Project>
