--- a/csharp/client/ManagedClient/ManagedClient.csproj
+++ b/csharp/client/ManagedClient/ManagedClient.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Apache.Arrow" Version="17.0.0" />
+    <PackageReference Include="Apache.Arrow.Flight" Version="17.0.0" />
     <PackageReference Include="Google.Protobuf" Version="3.28.2" />
     <PackageReference Include="Grpc.Net.Client" Version="2.66.0" />
     <PackageReference Include="Grpc.Tools" Version="2.66.0">
@@ -16,9 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf 
-	    Include="..\..\..\proto\proto-backplane-grpc\src\main\proto\deephaven\proto\*.proto"
-        ProtoRoot="..\..\..\proto\proto-backplane-grpc\src\main\proto"
-	    GrpcServices="Client" />
+    <Protobuf Include="..\..\..\proto\proto-backplane-grpc\src\main\proto\deephaven\proto\*.proto" ProtoRoot="..\..\..\proto\proto-backplane-grpc\src\main\proto" GrpcServices="Client" />
   </ItemGroup>
 </Project>
