--- a/csharp/client/ManagedClient/ManagedClient.csproj
+++ b/csharp/client/ManagedClient/ManagedClient.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="RoaringBitmap" Version="0.0.9" />
   </ItemGroup>
 
   <ItemGroup>
