--- a/csharp/client/DndClient/DndClient.csproj
+++ b/csharp/client/DndClient/DndClient.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ManagedClient\ManagedClient.csproj" />
+  </ItemGroup>
+
 </Project>
