--- a/csharp/client/DndClient/DndClient.csproj
+++ b/csharp/client/DndClient/DndClient.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.Net.Client" Version="2.66.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.66.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ManagedClient\ManagedClient.csproj" />
   </ItemGroup>
 
