--- a/csharp/client/RunManagedClient/RunManagedClient.csproj
+++ b/csharp/client/RunManagedClient/RunManagedClient.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DndClient\DndClient.csproj" />
     <ProjectReference Include="..\ManagedClient\ManagedClient.csproj" />
   </ItemGroup>
 
