--- a/csharp/client/ManagedClient/ManagedClient.csproj
+++ b/csharp/client/ManagedClient/ManagedClient.csproj
@@ -26,7 +26,7 @@
   <ItemGroup>
 	  <Protobuf Include="..\..\..\..\iris\proto\proto-auth-grpc\src\main\proto\deephaven_enterprise\proto\auth_service.proto"
 	            ProtoRoot="..\..\..\..\iris\proto\proto-auth-grpc\src\main\proto"
-	            AdditionalImportDirs="..\..\..\..\iris\proto\common\src\main\proto"
+	            AdditionalImportDirs="..\..\..\..\iris\proto\proto-auth\src\main\proto;..\..\..\..\iris\proto\proto-common\src\main\proto"
 	            GrpcServices="Client"
 	            />
   </ItemGroup>
