--- a/csharp/client/ManagedClient/ManagedClient.csproj
+++ b/csharp/client/ManagedClient/ManagedClient.csproj
@@ -24,9 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <Protobuf Include="..\..\..\..\iris\proto\proto-auth-grpc\src\main\proto\deephaven_enterprise\proto\auth_service.proto"
+	  <Protobuf Include="..\..\..\..\iris\proto\*\src\main\proto\deephaven_enterprise\proto\*.proto"
 	            ProtoRoot="..\..\..\..\iris\proto\proto-auth-grpc\src\main\proto"
-	            AdditionalImportDirs="..\..\..\..\iris\proto\proto-auth\src\main\proto;..\..\..\..\iris\proto\proto-common\src\main\proto"
+	            AdditionalImportDirs="..\..\..\..\iris\proto\proto-auth\src\main\proto;..\..\..\..\iris\proto\proto-common\src\main\proto;..\..\..\..\iris\proto\proto-config-grpc\src\main\proto;..\..\..\..\iris\proto\proto-config\src\main\proto;..\..\..\..\iris\proto\proto-controller-grpc\src\main\proto;..\..\..\..\iris\proto\proto-controller\src\main\proto;..\..\..\..\iris\proto\proto-registry-grpc\src\main\proto;..\..\..\..\iris\proto\proto-registry\src\main\proto;..\..\..\..\iris\proto\proto-routing-grpc\src\main\proto;..\..\..\..\iris\proto\proto-routing\src\main\proto;..\..\..\..\iris\proto\proto-schema-grpc\src\main\proto;..\..\..\..\iris\proto\proto-schema\src\main\proto"
 	            GrpcServices="Client"
 	            />
   </ItemGroup>
