--- a/cpp-client/deephaven/tests/CMakeLists.txt
+++ b/cpp-client/deephaven/tests/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(dhclient_tests
 
         include/private/deephaven/tests/test_util.h
         include/private/deephaven/third_party/catch.hpp
+        src/group_test.cc
 )
 
 if (LINUX)
