--- a/cpp-client/deephaven/tests/CMakeLists.txt
+++ b/cpp-client/deephaven/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(dhclient_tests
         src/cython_support_test.cc
         src/date_time_test.cc
         src/filter_test.cc
+        src/group_test.cc
         src/head_and_tail_test.cc
         src/input_table_test.cc
         src/join_test.cc
