Better tests for ElementType printing

--- a/cpp-client/deephaven/tests/CMakeLists.txt
+++ b/cpp-client/deephaven/tests/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(dhclient_tests
         src/test_util.cc
         src/ticking_test.cc
         src/time_unit_test.cc
+        src/types_test.cc
         src/ungroup_test.cc
         src/update_by_test.cc
         src/utility_test.cc
