--- a/csharp/ExcelAddIn/ExcelAddIn.csproj
+++ b/csharp/ExcelAddIn/ExcelAddIn.csproj
@@ -23,6 +23,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\client\Dh_NetClient\Dh_NetClient.csproj" />
+	  <ProjectReference Include="..\Dhe_NetClient\Dhe_NetClient.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup>
