ok this little reorg worked... should we fix all the namespaces? also todo: the enterprise protos

--- a/csharp/Dhe_NetClient/Dhe_NetClient.csproj
+++ b/csharp/Dhe_NetClient/Dhe_NetClient.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\client\Dh_NetClient\Dh_NetClient.csproj" />
+  </ItemGroup>
+
 </Project>
