--- a/csharp/Dhe_NetClient/Dhe_NetClient.csproj
+++ b/csharp/Dhe_NetClient/Dhe_NetClient.csproj
@@ -10,4 +10,19 @@
     <ProjectReference Include="..\client\Dh_NetClient\Dh_NetClient.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Protobuf Include="..\..\..\..\iris\proto\*\src\main\proto\deephaven_enterprise\proto\*.proto" ProtoRoot="..\..\..\..\iris\proto\proto-auth-grpc\src\main\proto" AdditionalImportDirs="..\..\..\..\iris\proto\proto-auth\src\main\proto;..\..\..\..\iris\proto\proto-common\src\main\proto;..\..\..\..\iris\proto\proto-config-grpc\src\main\proto;..\..\..\..\iris\proto\proto-config\src\main\proto;..\..\..\..\iris\proto\proto-controller-grpc\src\main\proto;..\..\..\..\iris\proto\proto-controller\src\main\proto;..\..\..\..\iris\proto\proto-registry-grpc\src\main\proto;..\..\..\..\iris\proto\proto-registry\src\main\proto;..\..\..\..\iris\proto\proto-routing-grpc\src\main\proto;..\..\..\..\iris\proto\proto-routing\src\main\proto;..\..\..\..\iris\proto\proto-schema-grpc\src\main\proto;..\..\..\..\iris\proto\proto-schema\src\main\proto;..\..\..\..\iris\proto\proto-serviceregistry-grpc\src\main\proto;..\..\..\..\iris\proto\proto-serviceregistry\src\main\proto;..\..\..\..\iris\proto\proto-unified-grpc\src\main\proto;..\..\..\..\iris\proto\proto-unified\src\main\proto" GrpcServices="Client" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.28.2" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.66.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.72.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
