--- a/csharp/client/Dhe_NetClient/Dhe_NetClient.csproj
+++ b/csharp/client/Dhe_NetClient/Dhe_NetClient.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\client\Dh_NetClient\Dh_NetClient.csproj" />
+    <ProjectReference Include="..\Dh_NetClient\Dh_NetClient.csproj" />
   </ItemGroup>
 
 
