--- a/csharp/client/Dh_NetClient/Dh_NetClient.csproj
+++ b/csharp/client/Dh_NetClient/Dh_NetClient.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>Deephaven.Dh_NetClient</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
