--- a/csharp/client/Dh_NetClient/Dh_NetClient.csproj
+++ b/csharp/client/Dh_NetClient/Dh_NetClient.csproj
@@ -5,6 +5,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Deephaven.Dh_NetClient</RootNamespace>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>Deephaven.CommunityClient</PackageId>
+    <Title>Client Library for Deephaven Community Core</Title>
+    <Version>0.39.1-alpha</Version>
+    <Company>Deephaven Data Labs LLC</Company>
+    <Authors>Deephaven Authors</Authors>
+    <RepositoryUrl>https://github.com/deephaven/deephaven-core</RepositoryUrl>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <Description>A .NET library for accessing data from Deephaven Community Core servers.</Description>
+    <Copyright>Copyright (c) 2016-2025 Deephaven Data Labs and Patent Pending</Copyright>
+    <PackageProjectUrl>https://deephaven.io/</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
