the final ultimatum

--- a/csharp/client/Dh_NetClient/Dh_NetClient.csproj
+++ b/csharp/client/Dh_NetClient/Dh_NetClient.csproj
@@ -17,6 +17,7 @@
     <PackageProjectUrl>https://deephaven.io/</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <NoWarn>1701;1702;1591;612</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
