--- a/csharp/client/Dh_NetClientTests/Dh_NetClientTests.csproj
+++ b/csharp/client/Dh_NetClientTests/Dh_NetClientTests.csproj
@@ -7,6 +7,8 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <NoWarn>1701;1702;1591;612</NoWarn>
+    <RootNamespace>Deephaven.Dh_NetClientTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
