--- a/csharp/ExcelAddIn/ExcelAddIn.csproj
+++ b/csharp/ExcelAddIn/ExcelAddIn.csproj
@@ -22,7 +22,6 @@
 		<PackageReference Include="ExcelDna.IntelliSense" Version="*-*" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\client\Dh_NetClient\Dh_NetClient.csproj" />
 	  <ProjectReference Include="..\client\Dhe_NetClient\Dhe_NetClient.csproj" />
 	</ItemGroup>
 
@@ -38,6 +37,7 @@
 		 Not sure what's going on here but setting this flag fixes that warning.
 		 -->
 		<ExcelAddInDisableAssemblyContextUnload>true</ExcelAddInDisableAssemblyContextUnload>
+		<RootNamespace>Deephaven.ExcelAddIn</RootNamespace>
 	</PropertyGroup>
 
 </Project>
